# XRCS

./: .gitignore  CMakeLists.txt  TODO  XRCS.def.asm  build-asm.bat  build-asm.sh
cmake/: CPM.cmake
include/: instruction-table.hpp  instructions.hpp  memory.hpp  opcodes.hpp  utility.hpp  xrcscpu.hpp  xrcsterm.hpp
src/: instructions.cpp  main.cpp  xrcscpu.cpp  xrcsterm.cpp
xrcs-lib/: baselib.asm  kernel.asm  user.asm  xrcsterm.asm
xrcs-lib/baselib/: assert.asm  ctype.asm  stdlib.asm  string.asm  utility.asm
